vista de admin y funcionario funcional, falta mejora y eliminar cosas sin uso del front